@@ -89,6 +89,16 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+	    <h3>December 2, 2008</h3>
+	      <b>Unstable</b> version 2.25.2 released.<br />
+	      <ul>
+          <li>Fixed #552204, AttributeError: 'NoneType' object has no attribute 'get_actions' in __get_match_action_for_cell</li>
+          <li>Fixed #559169, gnome power manager has new dbus path, this breaks some code in gdmaction module</li>
+          <li>Fixed #560190, Added RebootAction and RebootMatch</li>
+          <li>Fixed #561181, Support both simplejson and json module</li>
+          </ul>
+		  <a href="download.html">Download it</a>
+
 	    <h3>November 22, 2008</h3>
 	      <b>Stable</b> version 2.24.2 released.<br />
 	      <ul>
