@@ -1,3 +1,9 @@
+2008-12-02	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.25.2 release
+
 2008-11-30	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* screenshots.html
